# script-context

./: .gitignore  Cargo.toml  README.md  bin  package.json  tsconfig.json
fixtures/js/: package-lock.json  package.json
fixtures/rs/: package-lock.json  package.json
src/: env.rs  index.ts  install_context.rs  lib.rs  package_json.rs  package_manager.rs
src/js/: bin.ts
src/rs/: index.cts
workspaces/proc-macro-fixtures/: Cargo.toml
workspaces/proc-macro-fixtures/src/: lib.rs
workspaces/proc-macro-fixtures/tests/: main.rs
workspaces/script-context/: Cargo.toml  package.json
workspaces/script-context-js/: Cargo.toml  package.json
workspaces/script-context-js/fixtures/js/: package-lock.json
workspaces/script-context-js/fixtures/rs/: package-lock.json
workspaces/script-context-js/src/: lib.rs
workspaces/script-context-js/src/js/: bin.ts
workspaces/script-context-js/src/rs/: index.cts
workspaces/script-context/fixtures/rs/: package.json
workspaces/script-context/src/: env.rs  install_context.rs  lib.rs  package_json.rs  package_manager.rs  script.rs
workspaces/script-context/src/rs/: index.cts
