[package]
name = "script-context-js"
version = "0.3.2"
description = "postinstall on local or as dependency"
authors = ["Wayne Van Son"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
simple_logger = "4"
script-context = { path = "../script-context" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
