[package]
name = "script-context"
version = "0.3.1"
description = "postinstall on local or as dependency"
authors = ["Wayne Van Son"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib", "lib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4.17"
simple_logger = "4.0.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
