[package]
name = "script-context"
version = "0.3.1"
description = "postinstall on local or as dependency"
authors = ["Wayne Van Son"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
